objects/Reassign_Helper__c.object
<CustomObject><fields>
        <fullName>Assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mass_Reassign_Opportunities_Helper1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ClosedDate_From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ClosedDate_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields><fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mass_Reassign_Opportunities_Helper</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><gender>Feminine</gender><label>Mass Reassign Opportunity Helper</label><nameField>
        <label>Nom de Mass Reassign Opportunities Helpe</label>
        <type>Text</type>
    </nameField><pluralLabel>Mass Reassign Opportunities Helper</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>